<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".StepActivity">

    <FrameLayout
        android:id="@+id/step_fragment_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:background="?attr/colorPrimary"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/previous_step"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:paddingLeft="@dimen/chevron_lr_padding"
                android:paddingStart="@dimen/chevron_lr_padding"
                android:paddingTop="@dimen/chevron_tb_padding"
                android:paddingBottom="@dimen/chevron_tb_padding"
                app:srcCompat="@drawable/ic_chevron_left_white_24dp" />

            <ImageView
                android:id="@+id/next_step"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:paddingRight="@dimen/chevron_lr_padding"
                android:paddingEnd="@dimen/chevron_lr_padding"
                android:paddingTop="@dimen/chevron_tb_padding"
                android:paddingBottom="@dimen/chevron_tb_padding"
                app:srcCompat="@drawable/ic_chevron_right_white_24dp" />
        </RelativeLayout>
    </android.support.v7.widget.Toolbar>

</RelativeLayout>